RT-38321: [Dialogs] Fix layout issues

--- a/modules/controls/src/main/resources/com/sun/javafx/scene/control/skin/modena/modena.css
+++ b/modules/controls/src/main/resources/com/sun/javafx/scene/control/skin/modena/modena.css
@@ -3351,12 +3351,16 @@ is being used to size a border should also be in pixels.
     -fx-padding: 0.833333em; /* 10px */
 }
 
+.dialog > .dialog-pane > .content.label {
+    -fx-alignment: top-left;
+    -fx-padding: 0.833333em 0.833333em 0 0.833333em; /* 0 10 0 10 */
+}
 .dialog > .dialog-pane > .content {
-    -fx-padding: 0.833333em; /* 10px */
+    -fx-padding: 0.833333em; /* 10 */
 }
 
 .dialog:no-header > .dialog-pane .graphic-container {
-    -fx-padding: 0.833333em 0.833333em 0 0.833333em; /* 10px 10px 0px 10px */
+    -fx-padding: 0.833333em 0 0 0.833333em; /* 10px 0px 0px 10px */
 }
 
 .dialog:header > .dialog-pane .header-panel {
@@ -3371,6 +3375,7 @@ is being used to size a border should also be in pixels.
 }
 
 .dialog:header > .dialog-pane .header-panel .graphic-container {
+    /* This prevents the text in the header running directly into the graphic */
     -fx-padding: 0 0 0 0.833333em; /* 0px 0px 0px 10px */
 }
 
